# agent

agent-api/: .env  .gitignore  README.md  main.py  memory.txt  pyproject.toml  pytest.ini
agent-api/app/: __init__.py
agent-api/app/http/: app.py
agent-api/cache/: text-embedding-3-small25a4aa70-eae1-5b58-bb1d-77b2660e3648  text-embedding-3-small3dab5347-c797-5d37-b704-43296cceb671  text-embedding-3-small95ef7e96-264f-50ef-920e-58135d5f25b1  text-embedding-3-smallb9b34b3d-166d-5767-9c59-c2edf3f525e9
agent-api/config/: __init__.py  config.py  defalt_config.py
agent-api/examples/: 01prompt组件基础用法.py  02字符串提示拼接.py  03消息提示模板拼接.py  04复用提示词模板.py  05chatmodel使用技巧.py  06model批处理.py  07model流式输出.py  08stroutparser解析器.py  09jsonoutparser解析器.py  11lcel表过式简化版.py  12RunnableParallel.py  13RunnablePassthrough.py  15记忆功能条件.py  16消息历史组件记忆.py  18带缓存的模型.py  19faiss数据库配置.py  20textloader加载器.py  22网页加载器.py  23自定义加载器.py  24blob加载器.py  25fileSystemLoader.py  26genericloader.py  27字符串分割器使用.py  28递归分割器使用.py  29html分割器.py  30自定义文档分割器.py  31非分割类型转换器.py  32问答转换器.py  34装饰器创建工具.py  35BaseTool子类创建工具.py  36高德天气查询集成.py  37谷歌搜索工具.py  38基础langgraph.py  40langgraph构建的rag.py  41删除与更新消息.py  43检查点与线程.py  44agent与人进行交互.py  45tokenSplitter.py  46自定义文本分割.py  47向量模型引用.py  (+12 more)
agent-api/examples/chroma_bge/: chroma.sqlite3
agent-api/examples/chroma_db_1/: chroma.sqlite3
agent-api/examples/chroma_db_2/: chroma.sqlite3
agent-api/internal/core/tools/builtin_tools/: providers.yaml
agent-api/internal/core/tools/builtin_tools/entities/: __init__.py  provider_entity.py  tool_entity.py
agent-api/internal/core/tools/builtin_tools/providers/: provider_factory.py
agent-api/internal/core/tools/builtin_tools/providers/google/: __init__.py  google_serper.py  google_serper.yaml
agent-api/internal/exception/: __init__.py  exception.py
agent-api/internal/handler/: __init__.py  app_handler.py
agent-api/internal/lib/: helper.py
agent-api/internal/router/: router.py
agent-api/internal/schema/: app_schema.py
agent-api/internal/server/: __init__.py  http.py
agent-api/pkg/response/: __init__.py  http_code.py  response.py
agent-api/test/: conftest.py
agent-api/test/internal/handler/: test_app_handler.py
